# anime-dupe-finder

./: .gitignore  Cargo.toml  LICENSE  TAGS
script/: ci
src/: main.rs
