[package]

name = "anime-dupe-finder"
version = "1.1.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
repository = "https://git.technosorcery.net/?p=anime-dupe-finder.git"
homepage = "https://bugs.technosorcery.net/"
description = "Find duplicate anime files in an organized collection"
license = "BSD-2-Clause"
readme = "README.md"

[dependencies]
glob = "*"
clap = "*"
regex = "*"
regex_macros = "*"
log = "*"
env_logger = "*"
